fix footer on mobile version

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 footer {
- margin: 6rem 0rem;
+    margin: 10rem 0rem 2rem 0rem;
 }
 
 footer div.logo {
@@ -14,6 +14,7 @@ footer div.logo span {
     align-self: center;
     color: var(--accent-color10);
     margin-top: 1rem;
+    font-weight: 100;
 }
 
 footer nav {
@@ -27,8 +28,16 @@ footer div.container {
 
 /* Mobile */
 @media only screen and (max-width: 768px) {
+    footer {
+        margin: 3rem 0rem;
+    }
+
+    footer div.logo {
+        margin: 2rem 0rem;
+    }
+
     footer div.container {
-        flex-direction: column;
+        flex-direction: column-reverse;
         align-items: center;
     }
 
